src/objects/CMDPack4__mdt.object
<CustomObject>
    <label>CMDPack4</label>
    <pluralLabel>CMDPack4s</pluralLabel>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_type__c</fullName>
        <label>Content-type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Content_type__c</fullName>
        <label>Login Content-type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Endpoint__c</fullName>
        <label>Login Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Method_Type__c</fullName>
        <label>Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Endpoint__c</fullName>
        <label>Request Endpoint</label>
        <type>Url</type>
    </fields>
</CustomObject>